# cgal-docker-test

./: Dockerfile  README.md  docker-compose.yml
src/convex_hull/: CMakeLists.txt  convex_hull.cpp
src/triangulation/: CMakeLists.txt  triangulation.cpp
src/triangulation-json-input/: CMakeLists.txt  main.cpp
src/triangulation-json-input/json/: contour.json  manually_created.json
